# flux_bank

./: .gitignore  readme.md
analytic/: main.py  pyproject.toml  reproduce_issue.py
analytic/adapters/: base_grpc_repository.py
analytic/adapters/account/: account_repository.py  account_type_repository.py
analytic/adapters/atm/: atm_repository.py
analytic/adapters/branch/: branch_repository.py
analytic/adapters/card/: card_repository.py
analytic/mappers/: account_mapper.py  account_type_mapper.py  atm_mapper.py  branch_mapper.py  card_mapper.py  customer_address_mapper.py  customer_mapper.py  deposit_mapper.py  exchange_rate_mapper.py  fee_type_mapper.py  loan_mapper.py  loan_payment_mapper.py  login_log_mapper.py  notification_mapper.py  payment_template_mapper.py  transaction_category_mapper.py  transaction_fee_mapper.py  transaction_mapper.py  user_credential_mapper.py
analytic/scripts/: generate_proto.ps1  generate_proto.sh
analytic/services/: TODO.md  account_analytic.py  account_type_analytic.py  atm_analytic.py  branch_analytic.py  card_analytic.py  customer_address_analytic.py  customer_analytic.py  deposit_analytic.py  exchange_rate_analytic.py  fee_type_analytic.py  general_analytic.py  loan_analytic.py  loan_analytics_TODO.md  loan_analytics_service.py  loan_payment_analytic.py  login_log_analytic.py  notification_analytic.py  payment_template_analytic.py  transaction_analytic.py  transaction_analytic_service.py  transaction_category_analytic.py  transaction_fee_analytic.py  user_credential_analytic.py
analytic/tests/: test.ipynb
(+474 files in other folders)
