[project]
name = "analytic"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "ipykernel>=7.1.0",
    "mimesis>=18.0.0",
    "mypy-protobuf>=3.7.0",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
]
